@@ -1,3 +1,7 @@
+Fri Aug 28 21:47:15 GMT 2015  Olly Betts <olly@survex.com>
+
+	* src/gfxcore.cc: Fix the orientation of the starting end of tubes.
+
 Fri Aug 28 21:21:28 GMT 2015  Olly Betts <olly@survex.com>
 
 	* lib/po-to-msg.pl: Only check C format strings in messages with the
